service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: thitipun-image
  name: thitipun-image
  namespace: thitipun-image
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: thitipun-image
  type: ClusterIP
status:
  loadBalancer: {}
