ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: thitipun-image
  namespace: thitipun-image
spec:
  rules:
  - host: ken-ubuntu.saksiam.corp
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              number: 8080
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
